# parsling

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
examples/: basic_usage.py  batch_convert.py  financial_report.py  json_to_rich_md.py
parsling/: __init__.py  cli.py  config.py  converter.py  exporters.py  profiles.py  verify.py
tests/: test_converter.py  test_exporters.py  test_rich_markdown.py
